--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <title>Cardápio</title>
 </head>
-<body style="margin:0; height:100vh;">
-  <iframe src="sabor_e_cia.pdf" style="border:none; width:100%; height:100vh;"></iframe>
+
+<body style="margin:0; height:100vh; background:#fff;">
+  <img src="page1.jpg" alt="Cardápio - Página 1" style="width:100vw; max-width:100%; display:block;">
+  <img src="page2.jpg" alt="Cardápio - Página 2" style="width:100vw; max-width:100%; display:block;">
 </body>
+
 </html>
