Atualiza o estilo do cardápio, alterando a cor de fundo e os textos alternativos das imagens, além de adicionar margem superior à segunda imagem.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Cardápio</title>
 </head>
 
-<body style="margin:0; height:100vh; background:#fff;">
-  <img src="page1.jpg" alt="Cardápio - Página 1" style="width:100vw; max-width:100%; display:block;">
-  <img src="page2.jpg" alt="Cardápio - Página 2" style="width:100vw; max-width:100%; display:block;">
+<body style="margin:0; height:100vh; background:#f5e0cd;">
+  <img src="page1.jpg" alt="Cardápio Sorvetes" style="width:100vw; max-width:100%; display:block;">
+  <img src="page2.jpg" alt="Cardápio Frozen" style="width:100vw; max-width:100%; display:block; margin-top:40px;">
 </body>
 
 </html>
