--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body style="margin:0; height:100vh; background:#f5e0cd;">
   <img src="page1.jpg" alt="Cardápio Sorvetes" style="width:100vw; max-width:100%; display:block;">
   <img src="page2.jpg" alt="Cardápio Frozen" style="width:100vw; max-width:100%; display:block; margin-top:40px;">
+  <img src="page3.jpg" alt="Cardápio Paste" style="width:100vw; max-width:100%; display:block; margin-top:40px;">
 </body>
 
 </html>
